# materialist

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: fmtlib.txt.in  googletest.txt.in  spdlog.txt.in
config/: compile_shaders.in  compile_shaders.sh.in
glsl/: fragment.glsl  vertex.glsl
shaders/: font.frag  font.vert
src/: application.hpp  application.inl  application_hello_triangle.cpp  application_hello_triangle.hpp  error_callback.cpp  error_callback.hpp  error_handling.cpp  error_handling.hpp  fmtlib_all.hpp  font.hpp  font.inl  fps_counter.cpp  fps_counter.hpp  glfwwindow.hpp  log_gl_params.cpp  log_gl_params.hpp  main.cpp  main_window.cpp  main_window.hpp  materialist.hpp  opengl_all.hpp  opengl_initialize.cpp  opengl_initialize.hpp  print_info_log.cpp  print_info_log.hpp  shaders.cpp  shaders.hpp  spdlog_all.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_context.inl
tests/: CMakeLists.txt
tests/src/: materialist_tests.cpp
thirdparties/: CMakeLists.txt
thirdparties/fmtlib_external/: CMakeLists.txt
thirdparties/googletest_external/: CMakeLists.txt
thirdparties/patches/: spdlog_cmake.patch
thirdparties/spdlog_external/: CMakeLists.txt
